--- a/AndroidProjects/app/src/main/AndroidManifest.xml
+++ b/AndroidProjects/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".Home.PrincipalActivity"></activity>
+
+        <service android:name=".Model.Utils.InstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
